# mcp-weather

./: README.md
mcp-client-weather/: client-dialoGPT.py  client-llama3-ollama.py  client-llama3.py  client.py  pyproject.toml
mcp-server-weather/: pyproject.toml  server.py
