[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.69.0",
    "mcp>=1.17.0",
    "ollama>=0.6.0",
    "python-dotenv>=1.1.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
